@@ -1,3 +1,8 @@
+2006-12-17  SHIBATA Tomohisa  <shibata@kahua.org>
+
+	* Change: src/kahua/server.scm
+	  Add support :rest keyword to define-entry-method.
+
 2006-12-15  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Fix: src/kahua/server.scm
